NTI-7415 - stopgap fix for legend overflow in course roster

--- a/src/pie-chart/PieChart.css
+++ b/src/pie-chart/PieChart.css
@@ -24,7 +24,7 @@
 }
 
 .nti-pie-chart-legend li {
-	margin: 0.5em;
+	margin: 0 0.5em;
 }
 
 .nti-pie-chart-legend li > *:not(:last-child) {
